ticket #2407: bugfix - toggle button overlap with warning message

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -475,14 +475,11 @@
         .platform-counts
             input
                 margin-right: 5px
-
-    .panel-heading
-        margin-left: 16px
-
-    .filelist-panel
+    .file-panel
         h4
-            margin-top: 10px
+            margin: 10px
             display: inline-block
+    .filelist-panel
         .page-num, .file-count
             display: inline-block
         table
@@ -548,7 +545,8 @@
                 transition: opacity 0.45s ease-in-out
 
     .file-panel-toggle
-        position: absolute
+        display: inline-block
+        margin-left: -15px
         padding: 0
         top: 8px
         height: 45px
